--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
   <title>Products list app</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-          href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
-          rel="stylesheet"
-  />
+<!--  <link-->
+<!--          href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"-->
+<!--          rel="stylesheet"-->
+<!--  />-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
 <body>
